--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   ar_flutter_plugin_2: ^0.0.3
   vector_math: ^2.1.4
   collection: ^1.18.0
+  uuid: ^4.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
