--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,10 @@ dependencies:
   uuid: ^4.0.0
   video_player: ^2.10.0
   flutter_lints: ^5.0.0
+  path_provider: ^2.0.0
+  shared_preferences: ^2.0.0
+  share_plus: ^7.0.0
+  permission_handler: ^11.0.0
 
   cupertino_icons: ^1.0.8
 
